actualizamos errores obtenidos